# apple-2020-oct

./: .#mymod.py  Apple 2020 Nov 1.ipynb  Apple 2020 Oct 11.ipynb  Apple 2020 Oct 14.ipynb  Apple 2020 Oct 18.ipynb  Apple 2020 Oct 21.ipynb  Apple 2020 Oct 25.ipynb  Apple 2020 Oct 26.ipynb  Apple 2020 Oct 28.ipynb  flycheck_mymod.py  myfile1.txt  myfile2.txt  mymod.py  myoutfile.txt  runtimes-1604220837.871949.txt  runtimes-1604220837.872751.txt  runtimes-1604220839.8765671.txt  runtimes-1604220841.881872.txt  runtimes.txt
mypackage/: b.py  flycheck_a.py  flycheck_b.py
myvenv/: pyvenv.cfg
rmlpackage/: pyproject.toml
rmlpackage/rmlpackage/: __init__.py  hello.py
rmlpackage/tests/: test_rmlpackage.py
