[tool.poetry]
name = "rmlpackage"
version = "0.2.0"
description = "Another amazing package that does nothing!"
authors = ["Reuven Lerner <reuven@lerner.co.il>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
